--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -21,11 +21,11 @@
 
     </ion-list>
 
-    <button ion-button block class="login">Login</button>
+    <button ion-button block color="secondary">Login</button>
     <ion-grid>
       <ion-row>
         <ion-col col-6>
-          <button ion-button block>Registrar</button>
+          <button ion-button block (click)="goToRegister()">Registrar</button>
         </ion-col>
         <ion-col col-6>
           <button ion-button block>Esqueci a senha</button>
