--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -28,7 +28,7 @@
           <button ion-button block (click)="goToRegister()">Registrar</button>
         </ion-col>
         <ion-col col-6>
-          <button ion-button block>Esqueci a senha</button>
+          <button ion-button block (click)="goToEsqueci()">Esqueci a senha</button>
         </ion-col>
       </ion-row>
     </ion-grid>
