Alimento do dia

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,24 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>
-      Ionic Blank
+      Alimento do dia
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  Temos hoje no almoço
+
+  <ion-list padding-top color="white">
+    <ion-row>
+      <ion-label>
+        Principal
+      </ion-label>
+      <ion-avatar>
+        <img src="assets/img/foodbg.jpg"/>
+      </ion-avatar>
+    </ion-row>
+  </ion-list>
+
+  <button ion-button full color="secondary">Solicitar troca</button>
 </ion-content>
